--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.13,<4"
 dependencies = [
     "graphiti-core (>=0.10.3,<0.11.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
-    "pygithub (>=2.6.1,<3.0.0)"
+    "pygithub (>=2.6.1,<3.0.0)",
+    "flask (>=3.1.0,<4.0.0)",
+    "neo4j-driver (>=5.28.1,<6.0.0)"
 ]
 
 
